
EZC_BASE_PATH
   If you are not using the bundled eZ Components, then for optimal speed it is
   recommended to set EZC_BASE_PATH to either ezc/Base/base.php or Base/src/base.php,
   depending on how you installed the eZ Components. By default, if this setting
   is not present, eZ Publish first tries to include ezc/Base/base.php. If that fails
   Base/src/base.php is included.

Changes to method signatures
----------------------------

- eZContentObject - fetchAttributesByIdentifier

  Parameter 3 is changed to be an array of locale codes, rather than a string
  with locale code.

- eZDBClusterFileHandler - getFileList

  The parameters have been completely changed. Earlier, getFileList() accepted
  2 booleans to define if files in the scopes 'binaryfile' and 'image' should
  be omitted. Now the method accepts an array of scopes of the files you want
  to be returned, and a boolean with which you can reverses the behavior so
  that all files in the scopes in the array are excluded.

- eZRSSExport::fetchRSS2_0() and fetchRSS1_0

  These methods do not any longer accept the ID of the RSSExport as a parameter.
  Use eZRSSExport::fetch() first to fetch the instance by its ID.
  
- eZURLAliasML - fetchByAction

  For this method the already existing parameter *$maskLanguages* have been
  reused. For boolean values the old logic will be triggered, for string
  values entries will be filtered with the locale's language mask.

  *$onlyprioritized* will not have any effect, when a locale is specified in
  *$maskLanguages*.

- eZURLAliasML - getPath

  New *$locale* parameter introduced. When *$locale* is used, it will override the
  default filtering in the *choosePriortizedRow()* method.

- eZURLAliasML - fetchPathByActionList

  *$locale* parameter added, with fallback to normal behaviour.


Change of behaviour
-------------------

- eZContentClass - __clone

  A clone of an instance of eZContentClass will have a new remote ID, while